<resources>
    <string name="app_name">Daftar Aktivitas</string>
    <string name="activity_photo">Activity Photo</string>
    <string name="item_name">Nama Aktivitas</string>
    <string name="item_detail">Detail Aktivitas</string>
    <string name="caption">Source: flaticon.com</string>
    <string name="favorite">Favorite</string>
    <string name="share">bagikan</string>
    <string name="about_name">Muhammad Rizal Bagus Prakasa</string>
    <string name="about_email">muh.rizalbagus@gmail.com</string>
    <string name="about_birthday">Sidoarjo, 16 Mei 2001</string>
    <string name="about_education">Mahasiswa S1 Sistem Informasi UNAIR</string>
    <string name="profile">profile</string>
</resources>