<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AboutActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/about"/>
    <TextView
        style="@style/AboutText.Title"
        android:text="@string/about_name"/>
    <TextView
        style="@style/AboutText"
        android:text="@string/about_education"/>
    <TextView
        style="@style/AboutText"
        android:text="@string/about_birthday"/>
    <TextView
        style="@style/AboutText"
        android:text="@string/about_email"/>
</LinearLayout>