<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/item_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/activity_photo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/caption"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/caption"/>
        </FrameLayout>
        <TextView
            style="@style/DetailText.Title"
            android:id="@+id/item_name"
            android:text="@string/item_name"/>
        <TextView
            style="@style/DetailText"
            android:id="@+id/item_detail"
            android:justificationMode="inter_word"
            android:text="@string/item_detail" />
        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                style="@style/AboutButton.Favorite"
                android:id="@+id/btn_favorite"
                android:text="@string/favorite"
                app:icon="@drawable/heart"
                app:iconGravity="textStart"
                app:iconPadding="8dp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/AboutButton.Share"
                android:id="@+id/btn_share"
                android:text="@string/share"
                app:icon="@drawable/share"
                app:iconGravity="textStart"
                app:iconPadding="8dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>