<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border">
    <ImageView
        android:id="@+id/item_photo"
        tools:src="@tools:sample/avatars"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/activity_photo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:orientation="vertical">
        <TextView
            style="@style/ListTitle"
            android:id="@+id/item_name"
            tools:text="@string/item_name" />
        <TextView
            style="@style/ListText"
            android:id="@+id/item_detail"
            android:justificationMode="inter_word"
            tools:text="@string/item_detail" />
    </LinearLayout>
</LinearLayout>